html y css terminados

--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Curriculum Vitae</title>
     <link rel="shortcut icon" href="https://img.icons8.com/fluency/48/000000/parse-from-clipboard.png"
         type="image/x-icon">
 
@@ -14,11 +14,9 @@
 <body>
 
     <header>
-
+        <h1> Brandon Luis Garcia Barron</h1>
+        <img src="io.jpg" alt="Brandon">
     </header>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
